--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install",
-    "commit": "git add . && cz"
+    "commit": "git add . && cz",
+    "teste": "npx --no-install commitlint --edit \"$1\""
   },
   "dependencies": {
     "@crello/react-lottie": "^0.0.11",
@@ -21,6 +21,8 @@
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
     "babel-plugin-styled-components": "^1.12.0",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.32.0",
@@ -30,8 +32,14 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.1",
+    "husky": "^4.3.8",
     "shelljs": "^0.8.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   },
   "license": "MIT",
   "config": {
